2007-09-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_strvector_t (igraph_strvector_permdelete)
	* src/vector.pmt (igraph_vector_permdelete) :
	use vector_t instead of long int* for the index
	* src/spmatrix.c (igraph_spmatrix_clear_row)
	(igraph_spmatrix_cleanup) : updated vector_permdelete calls

	* src/igraph_strvector.c (igraph_strvector_append) : added
	* examples/simple/igraph_strvector.c : updated

2007-08-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.pmt (igraph_vector_fill) : added
	* examples/simple/vector.c : fill check added

2007-08-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_betweenness) : 
	bug fixed when 'vids' is not all vertices, thanks to Alex Gutteridge

2007-08-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_lcf, igraph_lcf_vector) : added

2007-08-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_famous): some more graphs added

	* src/structure_generators.c (igraph_famous): corrected some names

2007-08-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2, igraph_isomorphic_function_vf2)
	(igraph_count_isomorphisms_vf2, igraph_get_isomorphisms_vf2)
	(igraph_subisomorphic_function_vf2, igraph_subisomorphic_vf2)
	(igraph_count_subisomorphisms_vf2, igraph_get_subisomorphisms_vf2) :
	added, reorganized

2007-08-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_famous) : added

2007-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : check directedness,
	check number of vertices, fix +1 bug for map12 and map21

	* src/vector.pmt (igraph_vector_add) : stupid bug corrected

	* src/vector.pmt (igraph_vector_add) : added

2007-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : added 'map12' and 'map21' 
	arguments

2007-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_graphopt) : added