@@ -451,6 +451,7 @@ int igraph_strvector_set(igraph_strvector_t *sv, long int idx,
 			 const char *value);
 int igraph_strvector_set2(igraph_strvector_t *sv, long int idx, 
 			  const char *value, int len);
+void igraph_strvector_clear(igraph_strvector_t *sv);
 void igraph_strvector_remove_section(igraph_strvector_t *v, long int from, 
 				     long int to);
 void igraph_strvector_remove(igraph_strvector_t *v, long int elem);
